--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,11 @@
 #outer-wrapper {
   display:flex;
   flex-flow: row wrap;
-  width: 1280px;
-  height: 800px;
+  width: 100vw;
+  height: 100vh;
+  background-color: green;
   margin: 0 auto;
-  border: 1px solid black;
+/*   border: 1px solid black; */
   justify-content: center;
   
 }
@@ -14,18 +15,33 @@
 #vs {
   width:200px;
   height:200px;
-  border: 1px solid black;
-  padding: 10px;
-  margin-left: 30px;
+/*   border: 1px solid black; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -80px 0 0 -170px;
+  z-index:100;
+  
+    
   
 }
 
-.movie-poster{
-  width:400px;
-  height:600px;
-  border: 1px solid black;
+.movie-poster-one-bg{
+  width:50vw;
+  height:100vh;
+/*   border: 1px solid black; */
   padding: 10px;
   margin: 30px;
+  background-color: orange;
+}
+
+.movie-poster-two-bg{
+  width:50vw;
+  height:100vh;
+/*   border: 1px solid black; */
+  padding: 10px;
+  margin: 30px;
+background-color: yellow;
 }
 
 #generate{
@@ -34,7 +50,6 @@
   height: 50px;
   border-radius: 40px;
   align-height: 50px;
-  
   
 }
 
